@@ -802,7 +802,8 @@ public class BspServiceMaster<I extends WritableComparable,
           aggregatorHandler.initialize(this);
 
           masterInfo = new MasterInfo();
-          masterServer = new NettyMasterServer(getConfiguration(), this);
+          masterServer =
+              new NettyMasterServer(getConfiguration(), this, getContext());
           masterInfo.setInetSocketAddress(masterServer.getMyAddress());
           masterClient =
               new NettyMasterClient(getContext(), getConfiguration(), this);
