@@ -94,7 +94,8 @@ public class RequestTest {
     serverData = MockUtils.createNewServerData(conf, context);
     workerInfo = new WorkerInfo(-1);
     server = new NettyServer(conf,
-        new WorkerRequestServerHandler.Factory(serverData), workerInfo);
+        new WorkerRequestServerHandler.Factory(serverData), workerInfo,
+            context);
     server.start();
     workerInfo.setInetSocketAddress(server.getMyAddress());
     client = new NettyClient(context, conf, new WorkerInfo());
